--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <systemPath>${project.basedir}/libs/algs4.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
